TEST_PROGRAMS/VALID/05/type_casts.go
/* Type casts. */

package main

type num int
var x int = 3
var y num = num(x)
var z float64 = float64(x)

func main() {
	// Do nothing
}
