TEST_PROGRAMS/INVALID/05/multi-var_assign_with_sep_types.go
/* Multi-variable assignment with separate types. */

package main

var x int, y int = 3, 2 // Error: Can't have separate types

func main() {
	// Do nothing
}
